--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <br><hr>
 
         <iframe src="https://drive.google.com/embeddedfolderview?id=1Mh7NzgAiXkWfhN2pdc7O2LHTns5CVSKc#list" style="width:100%; height:400px; border:20px;"></iframe>
-        
+
+        <p>To get the notes in order (according to date uploaded, which mostly is the actual order!), click on the notes' subject & after being redirected to a google drive folder, use the 'Sort By' feature and select 'Date Modified'.</p>
         <p>I upload all of my <b>corrected notes</b> here.</p>
         <p>If you need any specific notes,</p>
         <ul>
