--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="favicon.png" type="image/png">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3440556640899990"
-     crossorigin="anonymous"></script>
     <title>Sameer's Grade 10 Notes</title>
 </head>
 <body>
     <blockquote>
         <h1 style="text-align: center;">Sameer's Grade 10 Notes</h1>
 
-        <br><hr>
+        <hr><br><br>
 
         <iframe src="https://drive.google.com/embeddedfolderview?id=1Mh7NzgAiXkWfhN2pdc7O2LHTns5CVSKc#list" style="width:100%; height:400px; border:20px;"></iframe>
 
-        <p>To get the notes in order (according to date uploaded, which mostly is the actual order!), click on the notes' subject & after being redirected to a google drive folder, use the 'Sort By' feature and select 'Date Modified'.</p>
+        <ul><li><p><i>To get the notes in order (according to date uploaded, which mostly is the actual order!), click on the notes' subject & after being redirected to a google drive folder, use the 'Sort By' feature and select 'Date Modified'.</i></p></li></ul>
+        <br><br>
         <p>I upload all of my <b>corrected notes</b> here.</p>
+        <br>
         <p>If you need any specific notes,</p>
         <ul>
             <li>DM me in MS Teams</li>
